test/invalid/OperatorErrors/OperatorErrors.plume
/**
 * @author Robin Burgess 36815
 */
 class OperatorErrors extends Object is
 	field h : Integer
 	field t : Integer
 	method totalValue : () -> Integer is
 		t + (h + )t+h()